添加 Dell 域名到直连规则

--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -81,6 +81,11 @@ payload:
   - '+.windows.net'
   - '+.bing.com'
 
+  # ====== Dell ======
+  - '+.dell.com'
+  - '+.dell.com.cn'
+  - '+.delltechnologies.com'
+
   # ====== OriginLab ======
   - '+.originlab.com'
   - '+.originlabcloud.com'
