Add antigravity.google domains to Google ruleset

--- a/custom_google.yaml
+++ b/custom_google.yaml
@@ -27,3 +27,7 @@ payload:
   - '+.ggpht.com'
   - '+.google.cn'
   - '+.googledomains.com'
+  
+  # Antigravity - Google 实验性服务
+  - 'antigravity.google.com'
+  - 'antigravity.google'
